crib/composite/blockchain/anvil/v1/__snapshots__/TestAnvilComponent_with_persistence_and_ingress_config_1.snap.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: anvil-1234
    app.kubernetes.io/name: anvil
  name: anvil-1234
  namespace: foo-bar-baz
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: anvil-1234
      app.kubernetes.io/name: anvil
  serviceName: anvil-1234
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: anvil-1234
        app.kubernetes.io/name: anvil
    spec:
      containers:
        - args:
            - |-
              if [ ! -f ${ANVIL_STATE_PATH} ]; then
                echo "No state found, creating new state"
                anvil --host ${ANVIL_HOST} --port ${ANVIL_PORT} --chain-id ${ANVIL_CHAIN_ID} --block-time ${ANVIL_BLOCK_TIME} --dump-state ${ANVIL_STATE_PATH}
              else
                echo "State found, loading state"
                anvil --host ${ANVIL_HOST} --port ${ANVIL_PORT} --chain-id ${ANVIL_CHAIN_ID} --block-time ${ANVIL_BLOCK_TIME} --dump-state ${ANVIL_STATE_PATH} --load-state ${ANVIL_STATE_PATH}
              fi
          command:
            - sh
            - -c
          env:
            - name: ANVIL_CHAIN_ID
              value: "1234"
            - name: ANVIL_HOST
              value: 0.0.0.0
            - name: ANVIL_PORT
              value: "8545"
            - name: ANVIL_BLOCK_TIME
              value: "1"
            - name: ANVIL_STATE_PATH
              value: /data/anvil/anvil_state.json
          image: ghcr.io/foundry-rs/foundry:latest
          imagePullPolicy: Always
          name: blockchain
          ports:
            - containerPort: 8545
              name: rpc
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
