crib/composite/blockchain/anvil/v1/__snapshots__/TestAnvilComponent_with_persistence_and_ingress_config_3.snap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: anvil-1234
    app.kubernetes.io/name: anvil
  name: anvil-1234-ingress
  namespace: foo-bar-baz
spec:
  ingressClassName: example-ingress
  rules:
    - host: "*"
      http:
        paths:
          - backend:
              service:
                name: anvil-1234
                port:
                  number: 8545
            path: /
            pathType: Prefix
