crib/composite/blockchain/anvil/v1/__snapshots__/TestAnvilComponent_with_persistence_and_ingress_config_4.snap.yaml
apiVersion: crib.smartcontract.com/v1alpha1
kind: ClientSideApply
metadata:
  name: sdk.anvilcomposi-sdk.clientsideapply-157e430e-c8f4de49
  namespace: foo-bar-baz
spec:
  action: kubectl
  args:
    - rollout
    - status
    - statefulset
    - -l
    - app.kubernetes.io/instance=anvil-1234
    - --timeout=600s
  onFailure: abort
